--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>jxl</artifactId>
 			<version>2.6.12</version>
 		</dependency>
+		    <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>5.0.3</version>
+    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -45,6 +50,7 @@
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
+			
 		</plugins>
 	</build>
 
